# PPNCKH

./: .gitignore
GLANCE/: pyproject.toml  run_glance_baseline_adult.py
GLANCE/examples/: DefaultCredit.ipynb  GermanCredit.ipynb  HELOC.ipynb  dnn_with_preprocess_module.py  models.py  script.py  utils.py
GLANCE/examples/models/: compas_xgb.pkl  germannumeric_credit_xgb.pkl
GLANCE/src/glance/: counterfactual_costs.py
GLANCE/src/glance/clustering/: agglomerative.py
GLANCE/src/glance/local_cfs/: nearest_neighbor.py
GLANCE/src/glance/metrics/: __init__.py  feature_bias.py
GLANCE/src/glance/utils/: action.py  metadata_requests.py
GLANCE1/: README.md  requirements.txt  run_tabglance_adult.py
GLANCE1/examples/: Adult.ipynb  COMPAS.ipynb  param_grid.txt  results.csv
GLANCE1/examples/models/: default_credit_lr.pkl  default_credit_xgb.pkl  german_credit_xgb.pkl  germannumeric_credit_dnn.pkl  germannumeric_credit_lr.pkl  heloc_xgb.pkl
GLANCE1/glance-aaai/: pyvenv.cfg
GLANCE1/src/glance/clustering/: __init__.py  gmm.py
GLANCE1/src/glance/glance/: glance.py
GLANCE1/src/glance/local_cfs/: __init__.py  random_sampling.py  tabcf_method.py
TABCF/docs/superpowers/plans/: 2026-06-11-tabcf-colab-phase2-vae-models.md  2026-06-11-tabcf-colab-phase5-cf-generation.md
TABCF1/baselines/CARLA/: setup.py
TABCF1/docs/superpowers/plans/: 2026-06-11-tabcf-colab-phase1-foundation.md  2026-06-11-tabcf-colab-phase3-vae-training.md  2026-06-11-tabcf-colab-phase4-classifier-training.md
TABCF1/tabcf/vae/: main.py
(+1 files in other folders)
