[project]
name = "glance"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "GLANCE codebase for AAAI submission"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn",
    "numpy",
    "pandas",
    "tqdm",
    "dice-ml",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
